<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".aktivitas.DataPenelitianFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="123dp"
                android:contentDescription="@string/header_image"
                android:scaleType="centerCrop"
                android:src="@drawable/header" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/textViewTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/data_penelitian"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/last_update"
                    android:textSize="14sp"
                    android:textColor="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/textViewDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/data_penelitian_desc"
                    android:justificationMode="inter_word"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textViewRelated"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/statistik_data_penelitian"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="201dp"
                    android:contentDescription="@string/statistik"
                    android:layout_marginTop="16dp"
                    android:scaleType="centerCrop"
                    android:padding="2dp"
                    android:src="@drawable/ic_launcher_background" />

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:columnCount="2"
                    android:rowCount="8"
                    android:columnOrderPreserved="false">

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:layout_margin="2dp"
                        tools:text="Nama fakultas\nLihat Detail"
                        android:background="@drawable/button_square" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:layout_margin="2dp"
                        tools:text="Nama fakultas\nLihat Detail"
                        android:background="@drawable/button_square" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:layout_margin="2dp"
                        tools:text="Nama fakultas\nLihat Detail"
                        android:background="@drawable/button_square" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:layout_margin="2dp"
                        tools:text="Nama fakultas\nLihat Detail"
                        android:background="@drawable/button_square" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:layout_margin="2dp"
                        tools:text="Nama fakultas\nLihat Detail"
                        android:background="@drawable/button_square" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:layout_margin="2dp"
                        tools:text="Nama fakultas\nLihat Detail"
                        android:background="@drawable/button_square" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:layout_margin="2dp"
                        tools:text="Nama fakultas\nLihat Detail"
                        android:background="@drawable/button_square" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:layout_margin="2dp"
                        tools:text="Nama fakultas\nLihat Detail"
                        android:background="@drawable/button_square" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:layout_margin="2dp"
                        tools:text="Nama fakultas\nLihat Detail"
                        android:background="@drawable/button_square" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:layout_margin="2dp"
                        tools:text="Nama fakultas\nLihat Detail"
                        android:background="@drawable/button_square" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:layout_margin="2dp"
                        tools:text="Nama fakultas\nLihat Detail"
                        android:background="@drawable/button_square" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:layout_margin="2dp"
                        tools:text="Nama fakultas\nLihat Detail"
                        android:background="@drawable/button_square" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:layout_margin="2dp"
                        tools:text="Nama fakultas\nLihat Detail"
                        android:background="@drawable/button_square" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:layout_margin="2dp"
                        tools:text="Nama fakultas\nLihat Detail"
                        android:background="@drawable/button_square" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:layout_margin="2dp"
                        tools:text="Nama fakultas\nLihat Detail"
                        android:background="@drawable/button_square" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:layout_margin="2dp"
                        tools:text="Nama fakultas\nLihat Detail"
                        android:background="@drawable/button_square" />
                </GridLayout>

                <Button
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/kembali"
                    android:backgroundTint="@color/material_dynamic_neutral60"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
